--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --config build/webpack.prod.js",
+    "serve": "npm run build && node server.js",
     "start": "webpack-dev-server --hot --open --config build/webpack.dev.js"
   },
   "author": "",
@@ -15,6 +16,7 @@
     "babel-core": "^6.26.3",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.4",
+    "body-parser": "^1.18.3",
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^1.0.0",
     "eslint": "^5.7.0",
@@ -26,6 +28,7 @@
     "eslint-plugin-node": "^7.0.1",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
+    "express": "^4.16.4",
     "file-loader": "^2.0.0",
     "happypack": "^5.0.0",
     "html-webpack-plugin": "^3.2.0",
@@ -49,6 +52,7 @@
   },
   "dependencies": {
     "image-webpack-loader": "^4.4.0",
-    "mini-css-extract-plugin": "^0.4.4"
+    "mini-css-extract-plugin": "^0.4.4",
+    "vue-server-renderer": "^2.5.17"
   }
 }
